fixing spacing underneath you're watching

--- a/style1.css
+++ b/style1.css
@@ -23,6 +23,7 @@ h1 {
   color: white;
   text-align: center;
   font-size: 1.25rem;
+  margin-bottom: 30px;
 }
 
 .header-container {
